--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         </activity>
 
         <activity android:name=".SecondActivity"
-            android:launchMode="singleTop">  <!--以默认启动模式启动-->
+            android:launchMode="singleTop">
         </activity>
     </application>
 </manifest>
