--- a/app4/src/main/AndroidManifest.xml
+++ b/app4/src/main/AndroidManifest.xml
@@ -2,6 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.yiyiersanwu.app4">
 
+  <!--  //拨打电话权限-->
+<!--    <uses-permission android:name="android.permission.CALL_PHONE"/>-->
+<!--    //发送短信权限-->
+    <uses-permission android:name="android.permission.SEND_SMS"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
