数据库入门

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,12 @@
 rootProject.name='My Application'
-include ':app'
-include ':app2'
-include ':app3_1'
-include ':app4'
-include ':app3_2'
+/*include ':app'*/
+//include ':app2'
+//include ':app3_1'
+//include ':app4'
+//include ':app3_2'
+//include ':app5'
+//include ':app6'
+//include ':app7'
+//include ':app8'
+//include ':app9'
+include ':app10'
