--- a/settings.gradle
+++ b/settings.gradle
@@ -9,4 +9,5 @@ rootProject.name='My Application'
 //include ':app7'
 //include ':app8'
 //include ':app9'
-include ':app10'
+//include ':app10'
+include ':app11'
