此项目合集因为不可抗拒因素报废 本人无法修复 报错如下 Unsupported Modules Detected: Compilation is not supported for following modules: app12. Unfortunately you can't have non-Gradle Java modules and Android-Gradle modules in one project.

--- a/settings.gradle
+++ b/settings.gradle
@@ -10,4 +10,6 @@ rootProject.name='My Application'
 //include ':app8'
 //include ':app9'
 //include ':app10'
-include ':app11'
+//include ':app11'
+//include ':app13'
+include ':app14'
